@@ -41,17 +41,63 @@ with some limitations.
 In addition to the options supported by [plackup](https://metacpan.org/pod/plackup), starlight accepts the
 following options(s).
 
-## --max-workers
+## --access-log
 
-A number of worker processes. (default: 10)
+Specifies the pathname of a file where the access log should be
+written. By default, in the development environment access logs will
+go to STDERR. See [plackup](https://metacpan.org/pod/plackup). (default: none)
 
-## --timeout
+## --daemonize
 
-Seconds until timeout. (default: 300)
+Makes the process run in the background. It doesn't work (yet) in native
+Windows (MSWin32). (default: 0)
+
+## -E, --env
+
+Specifies the environment option. See [plackup](https://metacpan.org/pod/plackup). (default: "deployment")
+
+## --error-log
+
+Specify the pathname of a file where the error log should be written. This
+enables you to still have access to the errors when using `--daemonize`.
+(default: none)
+
+## --group
+
+Changes the group ids or group names that the server should switch to after
+binding to the port. The ids or names can be separated with commas or space
+characters. (default: none)
+
+## -I
+
+Specifies Perl library include paths, like perl's `-I` option. You
+may add multiple paths by using this option multiple times. See [plackup](https://metacpan.org/pod/plackup).
+
+## --ipv6
+
+Enables IPv6 support. The [IO::Socket::IP](https://metacpan.org/pod/IO%3A%3ASocket%3A%3AIP) module is required. (default: 1
+if [IO::Socket::IP](https://metacpan.org/pod/IO%3A%3ASocket%3A%3AIP) is available or 0 otherwise)
 
 ## --keepalive-timeout
 
 Timeout for persistent connections. (default: 2)
+
+## -L, --loader
+
+Starlet changes the default loader to _Delayed_ to make lower consumption
+of the children and prevent problems with shared IO handlers. It might be set to
+`Plack::Loader` to restore the default loader.
+
+## -M
+
+Loads the named modules before loading the app's code. You may load
+multiple modules by using this option multiple times. See [plackup](https://metacpan.org/pod/plackup).
+(default: none)
+
+## --main-process-delay
+
+The Starlight does not synchronize its processes and it requires a small delay
+in main process so it doesn't consume all CPU. (default: 0.1)
 
 ## --max-keepalive-reqs
 
@@ -63,60 +109,34 @@ one, persistent connections are disabled. (default: 1)
 Max. number of requests to be handled before a worker process exits. (default:
 1000)
 
+## --max-workers
+
+A number of worker processes. (default: 10)
+
 ## --min-reqs-per-child
 
 If set, randomizes the number of requests handled by a single worker process
 between the value and that supplied by `--max-reqs-per-chlid`.
 (default: none)
 
-## --loader
+## --pid
 
-Starlet changes the default loader to _Delayed_ to make a lower consumption
-of the childs and prevent problems with shared IO handlers. It might be set to
-`Plack::Loader` to restore the default loader.
-
-## --spawn-interval
-
-If set, worker processes will not be spawned more than once every given
-second. Also, when _SIGHUP_ is being received, no more than one worker
-process will be collected every given second. This feature is useful for
-doing a "slow restart". (default: none)
-
-## --main-process-delay
-
-The Starlight does not synchronize its processes and it requires a small delay
-in main process so it doesn't consume all CPU. (default: 0.1)
-
-## --ssl
-
-Enables SSL support. The [IO::Socket::SSL](https://metacpan.org/pod/IO%3A%3ASocket%3A%3ASSL) module is required. (default: 0)
-
-## --ssl-key-file
-
-Specifies the path to SSL key file. (default: none)
-
-## --ssl-cert-file
-
-Specifies the path to SSL certificate file. (default: none)
-
-## --ssl-ca-file
-
-Specifies the path to SSL CA certificate file used when verification mode is
-enabled. (default: none)
-
-## --ssl-client-ca-file
-
-Specifies the path to SSL CA certificate file for client verification.
+Specify the pid file path. Use it with `-D|--daemonize` option.
 (default: none)
 
-## --ssl-verify-mode
+## -q, --quiet
 
-Sets the verification mode for the peer certificate. See
-["SSL\_verify\_mode" in IO::Socket::SSL](https://metacpan.org/pod/IO%3A%3ASocket%3A%3ASSL#SSL_verify_mode). (default: 0)
+Suppress the message about starting a server.
 
-## --ipv6
+## -r, --reload
 
-Enables IPv6 support. The [IO::Socket::IP](https://metacpan.org/pod/IO%3A%3ASocket%3A%3AIP) module is required. (default: 0)
+Makes plackup restart the server whenever a file in your development
+directory changes. See [plackup](https://metacpan.org/pod/plackup). (default: none)
+
+## -R, --Reload
+
+Makes plackup restart the server whenever a file in any of the given
+directories changes. See [plackup](https://metacpan.org/pod/plackup). (default: none)
 
 ## --socket
 
@@ -125,19 +145,43 @@ socket file has to be not yet created. The first character `@` or `\0` in
 the socket file name means that an abstract socket address will be created.
 (default: none)
 
-## --user
+## --spawn-interval
 
-Changes the user id or user name that the server process should switch to
-after binding to the port. The pid file, error log or unix socket also are
-created before changing privileges. This option is usually used if the main
-process is started with root privileges because of binding to the
-low-numbered (<1024) port. (default: none)
+If set, worker processes will not be spawned more than once every given
+second. Also, when _SIGHUP_ is being received, no more than one worker
+process will be collected every given second. This feature is useful for
+doing a "slow restart". (default: none)
 
-## --group
+## --ssl
 
-Changes the group ids or group names that the server should switch to after
-binding to the port. The ids or names can be separated with commas or space
-characters. (default: none)
+Enables the SSL support. The [IO::Socket::SSL](https://metacpan.org/pod/IO%3A%3ASocket%3A%3ASSL) module is required. (default: 0)
+
+## --ssl-ca-file
+
+Specifies the path to the SSL CA certificate file used when verification mode
+is enabled. (default: none)
+
+## --ssl-cert-file
+
+Specifies the path to the SSL certificate file. (default: none)
+
+## --ssl-client-ca-file
+
+Specifies the path to the SSL CA certificate file for client verification.
+(default: none)
+
+## --ssl-key-file
+
+Specifies the path to the SSL key file. (default: none)
+
+## --ssl-verify-mode
+
+Sets the verification mode for the peer certificate. See
+["SSL\_verify\_mode" in IO::Socket::SSL](https://metacpan.org/pod/IO%3A%3ASocket%3A%3ASSL#SSL_verify_mode). (default: 0)
+
+## --timeout
+
+Seconds until timeout. (default: 300)
 
 ## --umask
 
@@ -146,25 +190,13 @@ representing disabled permissions bits for newly created files. It is usually
 `022` when a group shouldn't have permission to write or `002` when a group
 should have permission to write. (default: none)
 
-## --daemonize
+## --user
 
-Makes the process run in the background. It doesn't work (yet) in native
-Windows (MSWin32). (default: 0)
-
-## --pid
-
-Specify the pid file path. Use it with `-D|--daemonize` option.
-(default: none)
-
-## --error-log
-
-Specify the pathname of a file where the error log should be written. This
-enables you to still have access to the errors when using `--daemonize`.
-(default: none)
-
-## -q, --quiet
-
-Suppress the message about starting a server.
+Changes the user id or user name that the server process should switch to
+after binding to the port. The pid file, error log or unix socket also are
+created before changing privileges. This option is usually used if the main
+process is started with root privileges because of binding to the
+low-numbered (<1024) port. (default: none)
 
 ## SEE ALSO
 
