@@ -2,6 +2,7 @@
 
 * Print connection errors to stderr.
 * Allow to use SSL with IPv6.
+* IPv6 is enabled by default if IO::Socket::IP is available.
 * New option `--ssl-client-ca-file`.
 * Listen on tcp46 socket with `--ipv6` option when `--host` is missing.
 * Default `--host` is `0.0.0.0`.
